--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,700,900');
+
+body{
+  font-family: "Poppins";
+  background-color: #f2f5f2
+}
+
 .calculator{
   text-align: center;
   margin: 0 auto;
@@ -13,7 +20,7 @@
   text-align: right;
   font-size: 2em;
   border:none;
-  padding:  0 20px;
+  padding:  0px 20px;
   box-sizing: border-box;
 }
 
@@ -49,5 +56,6 @@ button:hover{
 }
 
 .operator:hover, .equal-sign:hover{
-  background-color: darkorange;
+  background-color: #ffc800;
+  color: white;
 }
